CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.4        |
+-----------------------+
BUGFIXES
24-11-05    Fixed long-standing image preview header probs

IMPROVEMENTS
14-12-05    'localeCategory' configurable, set to LC_ALL by default although European
            users will want to change this where supplying a , for the decimal separator
            causes calculation probs (use LC_TIME)
14-12-05    Integrated advanced locale features available via SGL_Locale, disabled
            by default
14-12-05    SGL_USR_OS renamed more correctly to SGL_CLIENT_OS
12-12-05    Block management enhanced - you can now create any number of arbitrarily
            positioned blocks and assign content to them (Andrey Podshivalov)
12-12-05    Uri aliases integrated into navigation module, external Uris handled
            (Andrey Podshivalov)
06-12-05	Basic CLI request implemented (Eric Persson)
01-12-05    Three url parsers loaded by default: classic querystring, standard
            Seagull SEF, and now UrlAlias, see the 0.5.4 updates notes for details:
            http://trac.seagullproject.org/wiki/Howto/Misc/Upgrading/05
01-12-05    Improved performance for DB-based sessions (Eric Persson)
30-11-05    Polish translation updated (Tomasz Osmialowski)
29-11-05	RSS query more configurable (bluetoad)
29-11-05	Web root path now configurable from installer
24-11-05    DB2 support added (Tobias Kuckuck)
23-11-05    Implemented ability to load default data in installer
23-11-05	Implemented Smarty renderer (Malaney J. Hill)
22-11-05    Added ServiceLocator class and fixed db independence for testing
21-11-05    Factored out setup of table name aliases, these are not set on a per-module
            basis in the file 'tableAliases.ini' parsed at setup time.
16-11-05    Chinese translation updated (Finjon Kiang)
14-11-05    Added version-checker routine to Maintenance manager
14-11-05    Implemented xml-rpc gateway for easy creation of Seagull web services